Removing flags and paths